# dynamic_memory_agent

./: .dockerignore  Dockerfile  Makefile  README.md  config.cfg  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml  todo.yml
src/dma/: __main__.py  app.py  cli.py
src/dma/benchmarking/: benchmark_input.py  benchmark_models.py  benchmarks.py  deep_eval_models.py  learning_benchmark.py  multi_turn_benchmark.py  parse_benchmark.py  run_benchmark.py  test_benchmark.py  vram_monitor.py
src/dma/benchmarking/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  (+1 more)
src/dma/config/: __init__.py  config.py  config_path.py  dma_config.py
src/dma/core/: __init__.py  conversation.py  memory.py  message.py  pipeline.py  retrieval.py  retrieval_results.py  sources.py  web_source.py
src/dma/extraction/: __init__.py  memory_builder.py  memory_converter.py  wikipedia_crawler.py
src/dma/generator/: __init__.py  base_generator.py  llama_cpp_chat_completion_generator.py  llama_cpp_generator.py  llama_cpp_generator_low.py
src/dma/memory/: __init__.py  evaluator.py  retriever.py
src/dma/pipeline/: __init__.py  pipeline.py  pipeline_status.py
src/dma/query/: query_generator.py
src/dma/refiner/: refiner.py
src/dma/utils/: __init__.py  app_paths.py  date_parser.py  env.py  message_formatter.py  ner.py  sources.py  text_embedding.py  text_formatting.py
src/dma/webui/: __init__.py  api.py  index.html
src/dynamic_memory_agent/: __main__.py
tests/: basemodel_parsing.py  library_test.py  test-faiss.py  test_core.py  test_llm_basemodel_response_formatting.py  test_media_wiki_api.py  test_neo4j.py  test_neo4j_memory.py  test_neo4j_performance.py  test_retriever.py
tests/data_collection/: .gitignore  test_wiki_crawler.py  wikipedia_topic_crawler.py
tests/helpers/: test_test.py
(+13 files in other folders)
