[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DynamicMemoryAgent"
version = "0.1.1"
description = "A dynamic, graph-based memory agent for grounded LLM inference."
authors = [
    { name="Ben Schumacher", email="ben.schumacher0@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    # list runtime dependencies here, e.g. "requests>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# This creates a command-line entry point (optional)
"dma-cli" = "dynamic_memory_agent.__main__:main"

[project.optional-dependencies]
test = [
    "coverage>=7.6"
]
