[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DynamicMemoryAgent"
version = "0.1.1"
description = "A dynamic, graph-based memory agent for grounded LLM inference."
authors = [
    { name="Ben Schumacher", email="ben.schumacher0@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    # list runtime dependencies here, e.g. "requests>=2.0"
    "torch",
    "torchvision",
    "transformers",
    "requests>=2.32.0",
    "spacy>=3.8.7",
    "llama_cpp_python>=0.3.16",
    "sentence-transformers",
    "python-dotenv>=1.1.1",
    "neo4j>=6.0.2",
    "fastapi>=0.119.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dma" = ["webui/static/**"]

[project.scripts]
# This creates a command-line entry point (optional)
"dma-cli" = "dma.__main__:main"